--- a/projects.html
+++ b/projects.html
@@ -3086,10 +3086,11 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Padmam Silver Jewellery transforms retail into an
-                              immersive experience, drawing inspiration from the
-                              lotus - nature’s emblem of grace and
-                              transcendence.
+                              Goyaz is more than a jewellery destination—it’s an
+                              architectural signature. The parabola-inspired
+                              facade, framed in rhythmic golden light,
+                              establishes a bold visual identity that lingers in
+                              the minds of passersby.
                             </p>
                           </div>
                         </li>
@@ -3162,14 +3163,16 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              The interiors bloom into a serene haven within the
-                              bustle of a mall, mirroring the delicate ripple of
-                              water around a lotus. A soft palette of blush
-                              pink, ivory white, and golden brass evokes warmth,
-                              elegance, and timeless luxury. The storefront,
-                              with its transparent glass panels, invites
-                              curiosity while harmonizing with the
-                              lotus-inspired interior.
+                              Inside, an intentionally zoned retail space
+                              divides into:
+                            </p>
+                            <p>
+                              A silver jewellery section in grounding green,
+                              radiating everyday elegance.
+                            </p>
+                            <p>
+                              An exclusive zone in serene blue, enveloping
+                              customers in quiet sophistication.
                             </p>
                           </div>
                         </li>
@@ -3206,20 +3209,18 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Spatial design prioritizes fluid movement,
-                              balancing aesthetics with functionality. A central
-                              architectural column - once a constraint—is
-                              reimagined as a majestic lotus stalk, crowned by
-                              sculpted petal-like forms. Thoughtful lighting,
-                              reflective flooring, and brass lotus inlays
-                              amplify the tranquil ambiance.
+                              The silver section uses clean white backdrops with
+                              deep green layers, amplifying calm and connection.
+                              The exclusive zone mirrors the parabola motif,
+                              crafting sculpted arch-like displays that cradle
+                              jewellery like gems in a setting. Rich blues and
+                              soft neutrals enhance luxury, inviting extended
+                              engagement.
                             </p>
                             <p>
-                              Padmam Silver Jewellery is more than a store—it’s
-                              an emotion. Every detail, from gold-trimmed
-                              displays to plush velvet seating, unfolds into an
-                              experience of cultural resonance, refined
-                              indulgence, and quiet wonder
+                              Every contour, every transition within Goyaz is
+                              designed to reflect elegance—through jewellery and
+                              the space it inhabits.
                             </p>
                           </div>
                         </li>
@@ -3350,16 +3351,6 @@
                           Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
                           +91 96189 02587<br />contact@eyecatcharchitects.in<br />
                         </p>
-                      </div>
-                      <p class="sub-toggle" onclick="toggleAddressTamil()">
-                        Tamilnadu
-                      </p>
-                      <div
-                        class="address"
-                        id="tamilnaduAddress"
-                        style="display: none"
-                      >
-                        <p class="detailedAddress">XYZ Address</p>
                       </div>
                     </div>
                     <div></div>
