--- a/projects.html
+++ b/projects.html
@@ -411,7 +411,11 @@
   <body>
     <div id="preloader">
       <div class="preloader-content">
-        <img src="/images/favicon.png" alt="Logo" class="preloader-logo" />
+        <img
+          src="/images/logo-white-bg.jpg"
+          alt="Logo"
+          class="preloader-logo"
+        />
         <div class="preloader-text">
           <span>A</span><span>r</span><span>c</span><span>h</span><span>i</span
           ><span>t</span><span>e</span><span>c</span><span>t</span
@@ -440,7 +444,7 @@
 
       .preloader-logo {
         width: 100px;
-        margin-bottom: 0px;
+        margin-bottom: 3px;
       }
 
       .preloader-text {
@@ -1960,6 +1964,18 @@
                               beautifully.
                             </p>
                           </div>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/ladia/Ladia Elevation Video 3.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
                         </li>
 
                         <li class="ss-carousel__item slideBlock">
