--- a/about-us.html
+++ b/about-us.html
@@ -932,7 +932,7 @@
                       style="display: none"
                     >
                       <p class="detailedAddress">
-                        <strong>Medha Aesthetics Pvt Ltd</strong><br />
+                        <strong>Eyecatch Architects</strong><br />
                         40-2-3/3C,1ST FLOOR, GOUSE STREET, MOGALRAJPURAM
                         VIJAYAWADA-520010.<br />
                         Ph No: 96189 02587<br />
