--- a/architecture.html
+++ b/architecture.html
@@ -775,7 +775,7 @@
                         style="display: none"
                       >
                         <p class="detailedAddress">
-                          <strong>Medha Aesthetics Pvt Ltd</strong><br />
+                          <strong>Eyecatch Architects</strong><br />
                           MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
                           Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
                           +91 96189 02587<br />contact@eyecatcharchitects.in<br />
