--- a/index.html
+++ b/index.html
@@ -1250,18 +1250,26 @@
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
                         <blockquote>
-                          Ipsum is simply dummy text of the printing and
-                          typesetting industry. Lorem Ipsum has been the
-                          industry's standard dummy text ever since the 1500s,
-                          when an unknown printer took a galley of type and
-                          scrambled it to make a type specimen book.
+                          Our beautiful architecture and the interior design
+                          come from a mastermind, Madhu Garu, which we had an
+                          amazing pleasure working with for both our branches.
+                          Him and his team has been consistent in delivering
+                          what we're looking for, have been very patient with
+                          the changes we suggested along the way. I think at
+                          some level, they've understood what Goyaz stands for,
+                          and I think that inspired to bring out these designs
+                          and experience. For example, in Panjagutta, we have a
+                          new bridal lounge where I'm currently sitting at, and
+                          I think this completely deserves an applause. EyeCatch
+                          your're the reason for it, and we're very happy
+                          working with them.
                         </blockquote>
                         <div class="testimonialMeta">
-                          <h4>Ravi Khurana</h4>
-                          <em>Managing Director, Khurana Realty</em>
+                          <h4>Mrs Priyanka</h4>
+                          <em>Managing Director, Goyaz</em>
                         </div>
                       </div>
-                      <div class="swiper-slide">
+                      <!-- <div class="swiper-slide">
                         <blockquote>
                           It is a long established fact that a reader will be
                           distracted by the readable content of a page when
@@ -1315,7 +1323,7 @@
                           <h4>Simran Kaur</h4>
                           <em>Creative Head, Haus of Living</em>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                     <div class="swiper-pagination"></div>
                     <div class="swiper-button-next"></div>
@@ -1334,7 +1342,7 @@
                   <div class="awardCard">
                     <div class="imgAward"><img src="images/FOAID.png" /></div>
                     <div class="awardInfo">
-                      <p>Conceptual Architecture & Finalist</p>
+                      <p>Winners: Conceptual Architecture Category</p>
                     </div>
                   </div>
                 </div>
@@ -1343,7 +1351,9 @@
                   <div class="awardCard">
                     <div class="imgAward"><img src="images/FOAID.png" /></div>
                     <div class="awardInfo">
-                      <p>Ongoing Inteior design</p>
+                      <p>
+                        Shorlisted as Top 50 - Ongoing Interior Design Category
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -1450,6 +1460,116 @@
               </div>
             </section>
 
+            <section class="services" id="ctaSection">
+              <!-- <div class="sectionHead parallax-section">
+                <h2>Our Verticals</h2>
+              </div> -->
+              <style>
+                #ctaSection h2 {
+                  font-size: 2rem;
+                }
+                .ctaButtonSection {
+                  justify-content: flex-start;
+                  align-items: center;
+                  display: flex;
+                }
+                .ctaButton {
+                  color: #000;
+                  border: 1px solid #000;
+                  padding: 12px 24px;
+                  text-decoration: none;
+                  align-self: center;
+                }
+                .ctaButton:hover {
+                  background-color: #000;
+                  color: #fff;
+                }
+              </style>
+              <div class="rowG50 borderBottom">
+                <div
+                  class="col8 parallax-section"
+                  style="border-right: 1px solid #ccc"
+                >
+                  <h2>Looking to elevate the aesthetic of your space?</h2>
+                  <p>
+                    Have a question for us? Let’s talk.<br />For all project
+                    inquiries, please email pranay@eyecatcharchitects.com with
+                    the subject NEW PROJECT
+                  </p>
+                </div>
+                <div class="col4 ctaButtonSection parallax-section">
+                  <a
+                    href="mailto:projects@eyecatcharchitects.com"
+                    class="ctaButton"
+                    >Contact us</a
+                  >
+                </div>
+              </div>
+            </section>
+
+            <section class="services" id="fooAbout">
+              <!-- <div class="sectionHead parallax-section">
+                <h2>Our Verticals</h2>
+              </div> -->
+              <style>
+                #fooAbout .col8 {
+                  text-align: center;
+                }
+                #fooAbout img {
+                  width: 150px;
+                  height: auto;
+                }
+                #fooAbout p {
+                  max-width: 70%;
+                  margin-left: auto;
+                  margin-right: auto;
+                }
+                #abtMenu {
+                  margin: 20px 0 0 0;
+                  padding: 0;
+                  list-style: none;
+                }
+                #abtMenu li {
+                  padding-bottom: 10px;
+                }
+                #abtMenu li a {
+                  color: #000;
+                  text-decoration: none;
+                  text-transform: uppercase;
+                }
+              </style>
+              <div class="rowG50 borderBottom">
+                <div
+                  class="col8 parallax-section"
+                  style="border-right: 1px solid #ccc"
+                >
+                  <img src="images/logo.png" />
+                  <p>
+                    <strong>Hyderabad</strong><br />
+                    Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
+                    Jubilee Hills, lane beside US polo Assn, Hyderabad,
+                    Telangana 500033. <br />+91 8125225696<br />contact@eyecatcharchitects.in<br />
+                  </p>
+                  <p>
+                    <strong>Vijayawada</strong><br />
+                    MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha Nagar,
+                    Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
+                    +91 96189 02587<br />contact@eyecatcharchitects.in<br />
+                  </p>
+                </div>
+                <div class="col4 parallax-section">
+                  <h3>Pages</h3>
+                  <ul id="abtMenu">
+                    <li><a href="/">About</a></li>
+                    <li><a href="/news-events.html">News</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="/careers.html">Careers</a></li>
+                    <li><a href="#footer">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+
             <footer class="footer" id="footer">
               <div class="footer-section">
                 <div class="footer-link" data-target="emailSection">
@@ -1507,7 +1627,7 @@
                       style="display: none"
                     >
                       <p class="detailedAddress">
-                        <strong>Medha Aesthetics Pvt Ltd</strong><br />
+                        <strong>Eyecatch Architects</strong><br />
                         MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
                         Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
                         +91 96189 02587<br />contact@eyecatcharchitects.in<br />
