--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,9 @@
                   class="col8 parallax-section"
                   style="border-right: 1px solid #ccc"
                 >
-                  <h2>Looking to elevate the aesthetic of your space?</h2>
+                  <h2>
+                    Are you thinking of an aesthetic makeover for your ambiance?
+                  </h2>
                   <p>
                     Have a question for us? Let’s talk.<br />For all project
                     inquiries, please email pranay@eyecatcharchitects.com with
@@ -1516,7 +1518,7 @@
                   text-align: center;
                 }
                 #fooAbout img {
-                  width: 150px;
+                  width: 130px;
                   height: auto;
                 }
                 #fooAbout p {
