--- a/index.html
+++ b/index.html
@@ -729,16 +729,25 @@
           <!-- Top Nav -->
           <div class="social">
             <div>
-              <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+              <a
+                href="https://www.facebook.com/EyeCatchArchitects"
+                target="_blank"
+                ><i class="bi bi-facebook"></i
+              ></a>
             </div>
             <div>
-              <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a
+                href="https://www.instagram.com/eyecatcharchitects/"
+                target="_blank"
+                ><i class="bi bi-instagram"></i
+              ></a>
             </div>
             <div>
-              <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
-            </div>
-            <div>
-              <a href="#" target="_blank"><i class="bi bi-youtube"></i></a>
+              <a
+                href="https://www.linkedin.com/company/eyecatch-architects1"
+                target="_blank"
+                ><i class="bi bi-linkedin"></i
+              ></a>
             </div>
           </div>
           <!-- Social -->
